Morning_Problems/Ferry/ferry-michaeltran14/test-cases/as-275-14-ferry.sh-test/Errors/000-stderr.txt
ferry.cpp: In function ‘int main()’:
ferry.cpp:16:25: error: ‘n’ was not declared in this scope
   16 |     for (int i = 0; i < n; ++i) {
      |                         ^
ferry.cpp:21:25: error: ‘m’ was not declared in this scope
   21 |     for (int i = 0; i < m; ++i) {
      |                         ^
chmod: cannot access 'ferry': No such file or directory
/home/michaeltran14/CMPUT_275/C++/Morning_Problems/Ferry/ferry-michaeltran14/soln/.build/build.sh: line 8: ./ferry: No such file or directory

Expected file "test-cases/as-275-14-ferry.sh-test/Expected/000-stdout.txt" has no output file match
Expected file "test-cases/as-275-14-ferry.sh-test/Expected/000-stderr.txt" has no output file match
